--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 							<div class="col-12">
 
 								<!-- Logo -->
-									<h1><a href="index.html" id="logo">Halcyonic</a></h1>
+									<h1><a href="index.html" id="logo">闲间能滨 ｜ XJNB</a></h1>
 
 								<!-- Nav -->
 									<nav id="nav">
 										<a href="index.html">Homepage</a>
-										<a href="threecolumn.html">Three Column</a>
-										<a href="twocolumn1.html">Two Column #1</a>
-										<a href="twocolumn2.html">Two Column #2</a>
-										<a href="onecolumn.html">One Column</a>
+										<a href="threecolumn.html">Story</a>
+										<a href="twocolumn1.html">Brain</a>
+										<a href="twocolumn2.html">Body</a>
+										<a href="onecolumn.html">Nature</a>
 									</nav>
 
 							</div>
@@ -41,8 +41,8 @@
 								<div class="col-6 col-12-medium">
 
 									<!-- Banner Copy -->
-										<p>We do something really useful, important, and unique. Learn all about it here ...</p>
-										<a href="#" class="button-large">Go on, click me!</a>
+										<p>Connecting knowledge, nature, and personal narratives to inspire meaningful change</p>
+										<a href="#" class="button-large">START</a>
 
 								</div>
 								<div class="col-6 col-12-medium imp-medium">
@@ -65,12 +65,13 @@
 								<!-- Feature #1 -->
 									<section>
 										<a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a>
-										<h2>Welcome to Halcyonic</h2>
+										<h2>Welcome to XJNB</h2>
 										<p>
-											This is <strong>Halcyonic</strong>, a free site template
-											by <a href="http://twitter.com/ajlkn">AJ</a> for
-											<a href="http://html5up.net">HTML5 UP</a>. It's responsive,
-											built on HTML5 + CSS3, and includes 5 unique page layouts.
+											This is <strong>闲间能滨 ｜ XJNB</strong>, a space where stories, 
+											knowledge, wellness, and nature converge. We believe in the power 
+											of narratives to inspire, the importance of interconnected ideas 
+											to drive innovation, and the beauty of connecting with the world 
+											around us.
 										</p>
 									</section>
 
@@ -258,7 +259,7 @@
 
 			<!-- Copyright -->
 				<div id="copyright">
-					&copy; Untitled. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a>
+					&copy; Untitled. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP @ajlkn</a>
 				</div>
 
 		</div>
