--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Halcyonic by HTML5 UP</title>
+		<title>闲间能滨｜XJNB</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 							<div class="col-12">
 
 								<!-- Logo -->
-									<h1><a href="index.html" id="logo">闲间能滨 ｜ XJNB</a></h1>
+									<h1><a href="index.html" id="logo">闲间能滨｜XJNB</a></h1>
 
 								<!-- Nav -->
 									<nav id="nav">
@@ -67,7 +67,7 @@
 										<a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a>
 										<h2>Welcome to XJNB</h2>
 										<p>
-											This is <strong>闲间能滨 ｜ XJNB</strong>, a space where stories, 
+											This is <strong>闲间能滨｜XJNB</strong>, a space where stories, 
 											knowledge, wellness, and nature converge. We believe in the power 
 											of narratives to inspire, the importance of interconnected ideas 
 											to drive innovation, and the beauty of connecting with the world 
@@ -150,11 +150,11 @@
 											<h3>A subheading about what we do</h3>
 										</header>
 										<ul class="check-list">
-											<li>Sed mattis quis rutrum accum</li>
-											<li>Eu varius nibh suspendisse lorem</li>
-											<li>Magna eget odio amet mollis justo</li>
-											<li>Facilisis quis sagittis mauris</li>
-											<li>Amet tellus gravida lorem ipsum</li>
+											<li>Explore the narratives that shape our understanding</li>
+											<li>Dive into the world of knowledge networks</li>
+											<li>A deep exploration of the human society</li>
+											<li>A celebration of our bond with animals and nature</li>
+											<li>Foster respect and understanding through interconnectedness</li>
 										</ul>
 									</section>
 
@@ -164,24 +164,26 @@
 								<!-- Box #3 -->
 									<section>
 										<header>
-											<h2>What People Are Saying</h2>
+											<h2>What Is Important</h2>
 											<h3>And a final subheading about our clients</h3>
 										</header>
 										<ul class="quote-list">
 											<li>
 												<img src="images/pic06.jpg" alt="" />
-												<p>"Neque nisidapibus mattis"</p>
-												<span>Jane Doe, CEO of UntitledCorp</span>
+												<p>"Je pensais que je voulais mener une vie 
+													de débauche, c'était mon idéal."</p>
+												<span>Françoise Sagan</span>
 											</li>
 											<li>
 												<img src="images/pic07.jpg" alt="" />
-												<p>"Lorem ipsum consequat!"</p>
+												<p>"I thought I wanted to lead a life of 
+													debauchery, that was my ideal."</p>
 												<span>John Doe, President of FakeBiz</span>
 											</li>
 											<li>
 												<img src="images/pic08.jpg" alt="" />
-												<p>"Magna veroeros amet tempus"</p>
-												<span>Mary Smith, CFO of UntitledBiz</span>
+												<p>"我考虑着，我要过一种卑鄙无耻的生活，这是我的理想。"</p>
+												<span>弗朗索瓦·萨冈</span>
 											</li>
 										</ul>
 									</section>
@@ -199,7 +201,7 @@
 
 								<!-- Links -->
 									<section>
-										<h2>Links to Important Stuff</h2>
+										<h2>Links</h2>
 										<div>
 											<div class="row">
 												<div class="col-3 col-12-small">
