--- a/index.html
+++ b/index.html
@@ -169,21 +169,14 @@
 										</header>
 										<ul class="quote-list">
 											<li>
-												<img src="images/pic06.jpg" alt="" />
+												<img src="images/pic066.jpg" alt="" />
 												<p>"Je pensais que je voulais mener une vie 
 													de débauche, c'était mon idéal."</p>
 												<span>Françoise Sagan</span>
 											</li>
 											<li>
-												<img src="images/pic07.jpg" alt="" />
-												<p>"I thought I wanted to lead a life of 
-													debauchery, that was my ideal."</p>
-												<span>John Doe, President of FakeBiz</span>
-											</li>
-											<li>
-												<img src="images/pic08.jpg" alt="" />
-												<p>"我考虑着，我要过一种卑鄙无耻的生活，这是我的理想。"</p>
-												<span>弗朗索瓦·萨冈</span>
+												<p>"我考虑着，要过一种卑鄙无耻的生活，这是我的理想。"</p>
+												<span>弗朗索瓦丝·萨冈</span>
 											</li>
 										</ul>
 									</section>
