--- a/index.html
+++ b/index.html
@@ -68,10 +68,7 @@
 										<h2>Welcome to XJNB</h2>
 										<p>
 											This is <strong>闲间能滨｜XJNB</strong>, a space where stories, 
-											knowledge, wellness, and nature converge. We believe in the power 
-											of narratives to inspire, the importance of interconnected ideas 
-											to drive innovation, and the beauty of connecting with the world 
-											around us.
+											knowledge, wellness, and nature converge. 
 										</p>
 									</section>
 
@@ -130,13 +127,14 @@
 									<section>
 										<header>
 											<h2>Who We Are</h2>
-											<h3>A subheading about who we are</h3>
 										</header>
 										<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
 										<p>
-											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan magna sed.
-											Suspendisse eu varius nibh. Suspendisse vitae magna eget odio amet mollis
-											justo facilisis quis. Sed sagittis amet lorem ipsum.
+											We believe in the power of narratives to inspire, the importance 
+											of interconnected ideas to drive innovation, and the beauty of 
+											connecting with the world around us.Through each section—Story, 
+											Brain, Body, and Nature—we invite you to explore, learn, and grow 
+											with us in a way that is both meaningful and transformative.
 										</p>
 									</section>
 
@@ -147,12 +145,10 @@
 									<section>
 										<header>
 											<h2>What We Do</h2>
-											<h3>A subheading about what we do</h3>
 										</header>
 										<ul class="check-list">
 											<li>Explore the narratives that shape our understanding</li>
 											<li>Dive into the world of knowledge networks</li>
-											<li>A deep exploration of the human society</li>
 											<li>A celebration of our bond with animals and nature</li>
 											<li>Foster respect and understanding through interconnectedness</li>
 										</ul>
@@ -165,11 +161,10 @@
 									<section>
 										<header>
 											<h2>What Is Important</h2>
-											<h3>And a final subheading about our clients</h3>
 										</header>
 										<ul class="quote-list">
 											<li>
-												<img src="images/pic066.jpg" alt="" />
+												<img src="images/pic066.jpeg" alt="" />
 												<p>"Je pensais que je voulais mener une vie 
 													de débauche, c'était mon idéal."</p>
 												<span>Françoise Sagan</span>
