--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			<!-- Content -->
 				<section id="content">
 					<div class="container">
-						<div class="row aln-center">
+						<div class="row aln-center equal-height-row">
 							<div class="col-4 col-12-medium">
 
 								<!-- Box #1 -->
@@ -158,7 +158,6 @@
 
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
-
 								<!-- Box #3 -->
 									<section>
 										<header>
@@ -178,7 +177,6 @@
 											</li>
 										</ul>
 									</section>
-
 							</div>
 						</div>
 					</div>
@@ -237,7 +235,7 @@
 					&copy; XianJianNengBin. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP </a>@ajlkn | 
 					<a href="https://beian.miit.gov.cn/" target="_blank" rel="noopener noreferrer">
 						辽ICP备20006599号-1
-					  </a>
+					</a>
 				</div>
 
 		</div>
