--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 							<div class="col-12">
 
 								<!-- Logo -->
-									<h1><a href="index.html" id="logo">XJNB | 闲间能滨</a></h1>
+								<h1><!--img src="images/xjnb-logo.svg" style="height: 1.5em; vertical-align: middle;"-->
+									<a href="index.html" id="logo">XJNB | 闲间能滨</a>
+								</h1>
 
 								<!-- Nav -->
 									<nav id="nav">
@@ -48,7 +50,7 @@
 								<div class="col-6 col-12-medium imp-medium">
 
 									<!-- Banner Image -->
-										<a href="#" class="bordered-feature-image"><img src="images/banner.jpg" alt="" /></a>
+										<a href="#" class="bordered-feature-image"><img src="images/banner.svg" alt="" /></a>
 
 								</div>
 							</div>
@@ -130,7 +132,7 @@
 										<header>
 											<h2>Who We Are</h2>
 										</header>
-										<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="#" class="feature-image"><img src="images/pic05.svg" alt="" /></a>
 										<p>
 											We believe in the power of narratives to inspire, the importance 
 											of interconnected ideas to drive innovation, and the beauty of 
