--- a/body.html
+++ b/body.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Two Column 1 - Halcyonic by HTML5 UP</title>
+		<title>XJNB | body</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -46,55 +46,30 @@
 								<!-- Main Content -->
 									<section>
 										<header>
-											<h2>Two Column #1</h2>
-											<h3>A generic two column layout</h3>
+											<h2>A World of Knowledge Networks</h2>
+											<h3>The architecture of knowing is layered, delicate, and alive.</h3>
 										</header>
-										<p>
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam metus, congue
-											vel suscipit ut, dignissim non risus. Vestibulum ante est, fringilla nec placerat
-											eu, vestibulum vitae diam. Integer eget egestas eros. Duis enim erat, mollis quis
-											lacinia eget, blandit nec ipsum. Donec vitae turpis ipsum. Aliquam mauris libero,
-											sagittis in eleifend at, mattis imperdiet velit. Donec urna risus, rutrum molestie
-											varius ac, lacinia sit amet augue. Nam ultrices elementum eros.
-										</p>
-										<p>
-											Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum
-											hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient
-											montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing
-											egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-											vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-											justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-											elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi
-											lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend
-											hendrerit.
-										</p>
-										<p>
-											Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio
-											mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat
-											egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-											vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-											justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-											iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
-										</p>
-										<p>
-											Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum
-											hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient
-											montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing
-											egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-											vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-											justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-											elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi
-											lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend
-											hendrerit.
-										</p>
-										<p>
-											Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio
-											mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat
-											egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-											vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-											justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-											iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
-										</p>
+										<p>The architecture of knowing is layered, delicate, and alive.<br>
+										From the raw scatter of data to the shaped contours of information, 
+										from the deepened patterns of knowledge to the slow, luminous unfolding 
+										of wisdom, each step is both an ascent and a narrowing.</p>
+
+										<p>In the rush of modern life, knowledge spreads faster than breath.<br>
+										Connections multiply, nodes shimmer and vanish, entire fields of study 
+										bloom and wither in a season.<br>
+										We inhabit knowledge networks that stretch across continents and 
+										disciplines, yet it is easy to mistake mere accumulation for true understanding.</p>
+
+										<p>Wisdom asks for something rarer: not how much we gather, but how deeply we grasp.<br>
+										It is not the endless weaving of facts into larger webs, but the 
+										patient cultivation of meaning.<br>
+										A careful sifting, a willingness to linger where complexity resists simplification.</p>
+
+										<p>In the roaring tides of information, to know deeply is an act of resistance.<br>
+										It is a quiet craftsmanship, building inner structures that can hold 
+										uncertainty, that can endure ambiguity.<br>
+										In such a world, wisdom is not an inheritance. It must be continuously, tenderly made.</p>
+
 									</section>
 
 							</div>
@@ -116,21 +91,6 @@
 											</ul>
 										</section>
 								
-										<section>
-											<header>
-												<h2>Ipsum Dolor</h2>
-											</header>
-											<p>
-												Vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat.
-											</p>
-											<ul class="link-list">
-												<li><a href="#">Sed dolore viverra</a></li>
-												<li><a href="#">Ligula non varius</a></li>
-												<li><a href="#">Dis parturient montes</a></li>
-												<li><a href="#">Nascetur ridiculus</a></li>
-											</ul>
-										</section>
 									</div>
 							</div>
 						</div>
