--- a/brain.html
+++ b/brain.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Three Column - Halcyonic by HTML5 UP</title>
+		<title>XJNB | brain</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -65,36 +65,31 @@
 								<!-- Main Content -->
 									<section>
 										<header>
-											<h2>Three Column</h2>
-											<h3>A generic three column layout</h3>
+											<h2>The Narratives That Shape Our Understanding</h2>
+											<h3>Stories do not simply describe the world; they create it.</h3>
 										</header>
 										<p>
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam metus, congue
-											vel suscipit ut, dignissim non risus. Vestibulum ante est, fringilla nec placerat
-											eu, vestibulum vitae diam. Integer eget egestas eros. Duis enim erat, mollis quis
-											lacinia eget, blandit nec ipsum. Donec vitae turpis ipsum. Aliquam mauris libero,
-											sagittis in eleifend at, mattis imperdiet velit. Donec urna risus, rutrum molestie
-											varius ac, lacinia sit amet augue. Nam ultrices elementum eros.
-										</p>
-										<p>
-											Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum
-											hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient
-											montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing
-											egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-											vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-											justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-											elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi
-											lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend
-											hendrerit.
-										</p>
-										<p>
-											Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio
-											mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat
-											egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-											vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-											justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-											iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
-										</p>
+										The ways we speak, the forms our narratives take, lay the foundation 
+										for the very thoughts we are capable of thinking.<br>
+										Language is not a mirror, passively reflecting reality — it is 
+										the scaffolding upon which reality is built in the mind.</p>
+
+										<p>The ethnographer knows this instinctively.<br>
+										To live alongside others, to observe not from a distance but 
+										from within, is to enter different worlds of meaning shaped by 
+										different words, gestures, silences.<br>
+										Here, understanding is not an act of extraction, but of immersion, 
+										a careful surrender to the unfamiliar rhythms of another way of being.</p>
+
+										<p>Every narrative, whether spoken, written, or silently lived, carries 
+											choices within it: which distinctions we make, which possibilities 
+											we open, which futures we dare to imagine.<br>
+										The stories we tell, and the stories we allow ourselves to hear, 
+										define not only how we see the world, but who we become within it.</p>
+
+										<p>In every act of understanding, we are not merely decoding; we are building.<br>
+										A new map. A new self.</p>
+										
 									</section>
 
 							</div>
