--- a/nature.html
+++ b/nature.html
@@ -48,15 +48,10 @@
 								<div class="sidebar-half">
 									<section>
 										<header>
-											<h2>Magna Phasellus</h2>
+											<h2>What's more...</h2>
 										</header>
 										<ul class="link-list">
-											<li><a href="#">Sed dolore viverra</a></li>
-											<li><a href="#">Ligula non varius</a></li>
-											<li><a href="#">Nec sociis natoque</a></li>
-											<li><a href="#">Penatibus et magnis</a></li>
-											<li><a href="#">Dis parturient montes</a></li>
-											<li><a href="#">Nascetur ridiculus</a></li>
+											<li><a href="#">Updating...</a></li>
 										</ul>
 									</section>
 							
