--- a/brain.html
+++ b/brain.html
@@ -46,17 +46,14 @@
 								<!-- Left Sidebar -->
 									<section>
 										<header>
-											<h2>Ipsum Dolor</h2>
+											<h2>Brain works as...</h2>
 										</header>
 										<p>
-											Vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-											iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat.
+											Updating...
 										</p>
 										<ul class="link-list">
-											<li><a href="#">Sed dolore viverra</a></li>
-											<li><a href="#">Ligula non varius</a></li>
-											<li><a href="#">Dis parturient montes</a></li>
-											<li><a href="#">Nascetur ridiculus</a></li>
+											<li><a href="#">...</a></li>
+											
 										</ul>
 									</section>
 							</div>
@@ -98,15 +95,11 @@
 								<!-- Right Sidebar -->
 									<section>
 										<header>
-											<h2>Magna Phasellus</h2>
+											<h2>What's more...</h2>
 										</header>
 										<ul class="link-list">
-											<li><a href="#">Sed dolore viverra</a></li>
-											<li><a href="#">Ligula non varius</a></li>
-											<li><a href="#">Nec sociis natoque</a></li>
-											<li><a href="#">Penatibus et magnis</a></li>
-											<li><a href="#">Dis parturient montes</a></li>
-											<li><a href="#">Nascetur ridiculus</a></li>
+											<li><a href="#">Updating...</a></li>
+											<li><a href="#">No idea yet...</a></li>
 										</ul>
 									</section>
 									
